portfolio updates :white_heart:

--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -1,13 +1,10 @@
 .about {
     .aboutSection {
         display: flex;
-
-        // div {
-        //     border: 1px solid brown;
-        // }
+        gap: 50px;
 
         .profile {
-            width: 80%;
+            width: 70%;
 
             img {
                 border: 5px solid $inactiveTextColour;
@@ -16,12 +13,20 @@
         }
 
         p {
+            position: relative;
+            top: -5px;
             line-height: 1.6;
-            margin-left: 50px;
             padding-bottom: 20px;
+        }
 
-            &:last-child {
-                padding-bottom: 0;
+        a {
+            display: inline-block;
+            border: 1px solid $primaryTextColour;
+            margin-top: 10px;
+            padding: 5px 10px;
+
+            &:hover, &:active, &:focus {
+                @include hover;
             }
         }
     }
