--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -3,7 +3,6 @@ header {
 
     .cursor {
         position: absolute;
-        left: -5%;
         height: 2px;
         width: 2px;
         border-radius: 50%;
@@ -11,9 +10,9 @@ header {
     }
 
     ul {
-        // border: 1px solid brown;
         display: flex;
         justify-content: flex-end;
+        gap: 50px;
         text-transform: uppercase;
         position: fixed;
         width: 90%;
@@ -22,54 +21,47 @@ header {
         border-bottom: 5px solid $primaryTextColour;
         padding: 20px 0;
 
-        li {
-            margin-right: 50px;
+        a {
+            color: $inactiveTextColour;
+            position: relative;
 
-            a {
-                color: $inactiveTextColour;
-                position: relative;
-
-                &:hover, &:active, &:focus {
-                    color: $primaryTextColour;
-                    @include blink;
-                }
-            }
-
-            &:last-child {
-                margin-right: 0;
+            &:hover, &:active, &:focus {
+                color: $primaryTextColour;
+                @include blink;
             }
         }
     }
 
     .heading {
-        // border: 1px solid brown;
-        text-align: center;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        text-align: center;
         width: 80%;
+        letter-spacing: 0.15rem;
         line-height: 1.6;
-        letter-spacing: 1.5px;
 
         h1 {
             position: relative;
             @include blink;
-        }
 
-        h1 + p {
-            height: 0;
+            & + p {
+                height: 0;
+            }
         }
     }
 
-    .fa-mouse {
-        // border: 1px solid brown;
-        font-size: 4rem;
-        color: $primaryTextColour;
-        text-align: center;
+    .mouse {
         position: absolute;
         bottom: 50px;
+        display: flex;
+        justify-content: center;
         width: 90%;
-        animation: bounce 2s ease infinite;
+
+        .fa-mouse {
+            font-size: 4rem;
+            animation: bounce 2s ease infinite;
+        }
     }
 }
